[feat] 프로젝트 전체 조회 인증중앙화 연결